<package format="2">
  <name>ros_arduino_bridge</name>
  <version>0.2.0</version>
  
  <description>
    Metapackage for ros_arduino_bridge.
  </description>
  
  <maintainer email="patrick@pirobot.org">Patrick Goebel</maintainer>
  
  <license>BSD</license>
  
  <url type="website">http://ros.org/wiki/ros_arduino_bridge</url>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ros_arduino_firmware</depend>
  <depend>ros_arduino_msgs</depend>
  <depend>ros_arduino_python</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>